# craft-bots

./: .gitignore  README.md  main.py  platform_interface_pb2.py  platform_interface_pb2.pyi  platform_interface_pb2_grpc.py  test_grpc.py
agents/: agent.py  ompas.py
api/: command.py
craftbots/entities/: actor.py
ompas-binding/: Cargo.toml  craft-bots.txt  history.txt
ompas-binding/domain/: actions.lisp  state-functions.lisp  task_methods.lisp
ompas-binding/src/: lib.rs
ompas-craft-bots/: Cargo.toml
ompas-craft-bots/domain/: domain.lisp  domain.scm  state-functions.lisp  task_methods.lisp
ompas-craft-bots/src/: lib.rs
