[package]
name = "ompas-craft-bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ompas-middleware = {path = "../../middleware"}
sompas-modules = {path = "../../scheme/modules"}
sompas-structs = {path = "../../scheme/structs"}
sompas-core= {path = "../../scheme/core"}
sompas-repl = {path = "../../scheme/repl"}
# ompas-utils = {path = "../utils"}
sompas-language= {path = "../../scheme/language"}
sompas-macros = {path = "../../scheme/macros"}
ompas-core = {path = "../../acting/core"}
ompas-language = {path = "../../acting/language"}
# aries_planning = {path = "../aries/planning"}
im = {workspace = true}
structopt = {workspace= true}
tokio = {workspace =true }
async-trait = {workspace = true}
macro_rules_attribute = {workspace = true}
tonic = {workspace = true}
tokio-stream = { workspace = true }
map-macro = {workspace =true}

[[bin]]
name = "ompas-craft-bots"
path = "src/bin/main.rs"
